--- a/PointPointCount/build.gradle
+++ b/PointPointCount/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         applicationId "com.zqu.weavey.ppcount"
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -30,11 +30,11 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile files('libs/locSDK_6.23.jar')
     //    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.android.support:appcompat-v7:23.2.1'
-    compile 'com.android.support:design:23.2.1'
-    compile 'com.android.support:cardview-v7:23.2.1'
-    compile 'com.android.support:support-v4:23.2.1'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:25+'
+    compile 'com.android.support:design:25+'
+    compile 'com.android.support:cardview-v7:25+'
+    compile 'com.android.support:support-v4:25+'
+    compile 'com.android.support:recyclerview-v7:25+'
     compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.getbase:floatingactionbutton:1.10.1'
